--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/Styles.css') }}"/>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/ihover.min.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" />
@@ -28,7 +28,7 @@
                     <a class="menu-item" href="https://github.com/scottx611x">
                         <img id="GITHUB" src="{{ url_for('static', filename='img/Github.png') }}" />
                     </a>
-                    <a class="menu-item" href="http://www.linkedin.com/pub/scott-ouellette/69/2b/209/">
+                    <a class="menu-item" href="https://www.linkedin.com/pub/scott-ouellette/69/2b/209/">
                         <img id="LINKEDIN" src="{{ url_for('static', filename='img/Linkedin.png') }}" />
                     </a>
                     <a class="menu-item" href="https://twitter.com/Scott_Ouellette">
@@ -37,13 +37,13 @@
                     <a class="menu-item" href="https://www.facebook.com/scott.ouellette1">
                         <img id="FACEBOOK" src="{{ url_for('static', filename='img/fb.png') }}"/>
                     </a>
-                    <a class="menu-item" href="http://instagram.com/scottyouellette11">
+                    <a class="menu-item" href="https://instagram.com/scottyouellette11">
                         <img id="INSTAGRAM" src="{{ url_for('static', filename='img/Instagram.png') }}"/>
                     </a>
                 </nav>
 
                 <!-- filters -->
-                <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
+                <svg xmlns="https://www.w3.org/2000/svg" version="1.1">
                     <defs>
                         <filter id="shadowed-goo">
 
