--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
         <script>
         new Date().getFullYear() > 2014 && document.write("-" + new Date().getFullYear());
         </script>, Scott Ouellette
-        <p>Hosted on a "serverless" infrastructure using
+        <p>Hosted with the aid of
             <a class="pool" href="https://github.com/Miserlou/Zappa">Zappa</a>
         </p>
     </div>
