--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/Styles.css') }}"/>
+	<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico')}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/Styles.css') }}"/>
     <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/ihover.min.css') }}">
