Add google analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -102,5 +102,5 @@
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-ui.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/tiltfx.js') }}"></script>
-
+{% include 'ga.html' %}
 </html>
