Add link to `/`

--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
                 <div id="MoiChild" class="center-block">
                     <div class="pool" style="display: inline-block;">
                         <div id="One" class="ih-item circle colored effect19">
-                            <a href="#">
+                            <a href="/">
                                 <div class="img pool">
                                     <img id="Moi" src="{{ url_for('static', filename='img/new.png') }}" alt="img">
                                 </div>
