--- a/templates/collision.html
+++ b/templates/collision.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block background %}
     <div id="collision">
-      <img class="back" src="{{ url_for('static', filename='img/bg3.png') }}" height="100%" width="100%">
+      <img class="back" src="{{ url_for('static', filename='img/' + background_image) }}" height="100%" width="100%">
       <svg class="svg" height="100%" width="100%"></svg>
     </div>
 {% endblock %}
