--- a/templates/tilt-shift.html
+++ b/templates/tilt-shift.html
@@ -14,7 +14,7 @@
             "rotateY" : 5 
           } 
         }' 
-        src="{{ url_for('static', filename='img/bg3.png') }}" height="100%" width="100%">
+        src="{{ url_for('static', filename='img/' + background_image) }}" height="100%" width="100%">
 {% endblock %}
 
 {% block js %}
