--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html lang="en" class = "inner">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -12,99 +12,16 @@
     {% endblock %}
 </head>
 
-<html lang="en" class = "inner">
-<title>Scott's Webpage</title>
+<title>{{ title }}</title>
 <div class="page-wrap">
     <body>
-        <div id="nav" class="dropdown">
-          <button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown">
-            Choose a
-            <br>background effect
-            <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu">
-            <li>
-                <a class="main-link" href="/collision"> 
-                    <span>
-                        <i id='collision-source' class="fa fa-link source-link" data-toggle="tooltip" data-placement="right" title="Open effect's source">
-                        </i>
-                    </span>
-                    Collision Detection
-                </a>
-            </li>
-            <li>
-                <a class="main-link" href="/tilt-shift">
-                    <span><i id='tilt-shift-source' class="fa fa-link source-link" data-toggle="tooltip" data-placement="right" title="Open effect's source"></i></span>
-                    Tilt Shift
-                </a>
-            </li>
-            <li>
-                <a class="main-link" href="/voronoi">
-                    <span><i id='voronoi-source' class="fa fa-link source-link" data-toggle="tooltip" data-placement="right" title="Open effect's source"></i></span>
-                    Voronoi Diagram
-                </a>
-            </li>
-          </ul>
-        </div>
-        {% block background %}
-        {% endblock %}
+        {% include 'choose-effect.html' %}
+
+        {% block background %}{% endblock %}
+
         <div class="container-fluid">
-            <nav class="menu">
-                <input type="checkbox" href="#" class="menu-open" name="menu-open" id="menu-open" />
-                <label class="menu-open-button" for="menu-open">
-                    <span class="hamburger hamburger-1"></span>
-                    <span class="hamburger hamburger-2"></span>
-                    <span class="hamburger hamburger-3"></span>
-                </label>
-
-                <a class="menu-item" href="https://github.com/scottx611x">
-                    <img id="GITHUB" src="{{ url_for('static', filename='img/Github.png') }}" />
-                </a>
-                <a class="menu-item" href="https://www.linkedin.com/pub/scott-ouellette/69/2b/209/">
-                    <img id="LINKEDIN" src="{{ url_for('static', filename='img/Linkedin.png') }}" />
-                </a>
-                <a class="menu-item" href="https://twitter.com/Scott_Ouellette">
-                    <img id="TWITTER" src="{{ url_for('static', filename='img/Twitter.png') }}" />
-                </a>
-                <a class="menu-item" href="https://instagram.com/scottyouellette11">
-                    <img id="INSTAGRAM" src="{{ url_for('static', filename='img/Instagram.png') }}"/>
-                </a>
-            </nav>
-
-            <!-- filters -->
-            <svg id="goo" xmlns="https://www.w3.org/2000/svg" version="1.1">
-                <defs>
-                    <filter id="shadowed-goo">
-
-                        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                        <feGaussianBlur in="goo" stdDeviation="3" result="shadow" />
-                        <feColorMatrix in="shadow" mode="matrix" values="0 0 0 0 0  0 0 0 0 0  0 0 0 0 0  0 0 0 1 -0.2" result="shadow" />
-                        <feOffset in="shadow" dx="1" dy="1" result="shadow" />
-                        <feComposite in2="shadow" in="goo" result="goo" />
-                        <feComposite in2="goo" in="SourceGraphic" result="mix" />
-                    </filter>
-                    <filter id="goo">
-                        <feGaussianBlur in="SourceGraphic" result="blur" stdDeviation="10" />
-                        <feColorMatrix in="blur" mode="matrix" values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 18 -7" result="goo" />
-                        <feComposite in2="goo" in="SourceGraphic" result="mix" />
-                    </filter>
-                </defs>
-            </svg>
-
-            <div id="MoiContainer" class="cool center-block" style="text-align:center;">
-                <div id="MoiChild" class="center-block">
-                    <div class="pool" style="display: inline-block;">
-                        <div id="One" class="ih-item circle colored effect19">
-                            <a href="/">
-                                <div class="img pool">
-                                    <img id="Moi" src="{{ url_for('static', filename='img/new.png') }}" alt="img">
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'nav.html' %}
+            {% include 'moi.html' %}
         </div>
     </div>
 </body>
